--- a/style.css
+++ b/style.css
@@ -175,8 +175,8 @@ input[type="email"]:focus {
 }
 #retro-shutdown-screen {
     position: fixed;
-    top: 50%;
-    left: 50%;
+        width: 100vw;
+    height: 100vh;
     transform: translate(-50%, -50%); /* wyśrodkowanie */
     width: 350px; /* zmniejszona szerokość */
     height: auto; /* automatyczna wysokość dopasowana do zawartości */
@@ -193,6 +193,7 @@ input[type="email"]:focus {
     border: 2px solid #FFFFFF; /* ramka okienkowa */
     padding: 20px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+background-size: 100% 100%, 4px 4px;
 }
 
 #retro-shutdown-screen.show {
