--- a/style.css
+++ b/style.css
@@ -227,13 +227,9 @@ input[type="email"]:focus {
     height: 100%;
     width: 0%;
     background-color: #FFFFFF;
-    animation: retroLoad 4s linear forwards;
 }
 
-@keyframes retroLoad {
-    from { width: 0%; }
-    to { width: 100%; }
-}
+
 
 
 
@@ -265,4 +261,50 @@ input[type="email"]:focus {
 @keyframes blink {
     0%, 100% { opacity: 1; }
     50% { opacity: 0; }
+}
+
+ Window 
+.loading-window {
+    border: 2px solid #33ff44;
+    padding: 20px 30px;
+    background: rgba(0, 20, 40, 0.8);
+}
+
+/* Progress bar  */
+.progress {
+    width: 100%;
+    height: 20px;
+    border: 2px solid #33ff44;
+    margin: 20px 0;
+    overflow: hidden;
+}
+
+.fill {
+    height: 100%;
+    width: 0;
+    background: linear-gradient(
+        90deg,
+        #33ff44,
+        #55ff66
+    );
+    transition: width 0.1s;
+}
+
+/* Retro flickering text  */
+.loading-text {
+    animation: blink 0.8s infinite steps(1);
+}
+
+@keyframes blink {
+    50% { opacity: 0; }
+}
+
+
+.retro-gif {
+    width: 500px;
+    margin-bottom: 15px;
+    padding: 4px;
+    background: black;
+    border: 1px solid #33ff44;
+    box-shadow: 0 0 8px #33ff44;
 }
